istio-testing/internet-service/istio-gateway.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api
  namespace: news-ns
spec:
  selector:
    istio: sure-istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - app.sure-ally.com
